# openforge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
examples/: __init__.py  benchmark_ninja_register_batching.py  gateway_server.yaml  gsm8k_common.py  gsm8k_gateway.yaml  gsm8k_runtime.yaml  run_gsm8k_ninja_train.sh  run_search_r1_ninja_train.sh  runtime.yaml  search_r1_runtime.yaml  shared.py  simple.yaml  train_gsm8k_ninja.py  train_gsm8k_ninja_rl.py  train_search_r1_ninja.py
examples/gsm8k/: __init__.py  common.py  run_ninja_train.sh  runtime.yaml  task.py  train_ninja.py
examples/livecodebench/: __init__.py  common.py  gateway.yaml  prepare_data.py  run_ninja_train.sh  runtime.yaml  train_ninja.py
examples/livecodebench_lcb_v6/: __init__.py  common.py  gateway.yaml  prepare_data.py  run_ninja_train.sh  runtime.yaml  task.py  train_ninja.py
examples/openclaw/: README.md  app.py  gateway.yaml  install_extension.sh  openclaw.json.example  reward.py  run_demo.sh  runtime.yaml  session_state.py  tui.py
examples/openclaw/extensions/rl-training-headers/: README.md  index.ts  openclaw.plugin.json
examples/openclaw/replay/: README.md  common.py  gsm8k_replay.py  gsm8k_runtime.yaml
examples/search_r1/: __init__.py  gateway.yaml  run_ninja_train.sh  runtime.yaml  train_ninja.py
src/openforge/: active_state.py  config.py  runtime.py
src/openforge/algo/: __init__.py
src/openforge/backends/sglang/: client.py  runtime.py  serialization.py  spec.py
src/openforge/benchmarks/: __init__.py
src/openforge/cli/: main.py  watch_tui.py
src/openforge/configs/: __init__.py  algo.py  base.py  cluster.py  data.py  gateway.py  models.py  openforge.py  rollout.py  topology.py  train.py
src/openforge/configs/backends/: __init__.py  fsdp2.py
src/openforge/core/: __init__.py
src/openforge/data/: __init__.py  database.py  interfaces.py  pool.py  types.py
src/openforge/engines/: __init__.py  abcs.py
src/openforge/engines/fsdp2/: __init__.py  backend.py  base.py  core.py  weight_update.py
src/openforge/engines/sglang/: __init__.py  client.py  runtime.py  serialization.py  spec.py
src/openforge/gateway/: __init__.py  main.py  runtime.py  server.py  service.py  train_loop.py  types.py
src/openforge/logging/: __init__.py  session.py  watch.py
src/openforge/ninja/: __init__.py  common.py  execute.py  registered.py  session.py  training.py  validation.py
src/openforge/policy/: types.py
src/openforge/rollout/: group.py  manager.py  runtime.py  types.py  worker.py
src/openforge/rollout/router/: __init__.py  client.py  server.py  types.py  utils.py
src/openforge/rollout/sglang/: client.py  engine.py  engine_group.py  engine_runtime.py  router.py  runtime.py  server.py  spec.py  types.py  utils.py
src/openforge/scheduler/: __init__.py  actor_critic_ref_group.py  actor_ref_group.py  rollout_group.py  utils.py
src/openforge/scheduler/workers/: __init__.py  actor_critic_ref_worker.py  actor_ref_worker.py  rollout_worker.py
src/openforge/train/: backend.py  group.py  loop.py  manager.py  runtime.py  types.py  worker.py
src/openforge/train/fsdp2/: backend.py  base.py  utils.py  (+7 more)
src/openforge/utils/: concurrency.py  distributed.py  memory.py  models.py  nccl.py  networking.py  packed.py  processes.py  processing.py  ray.py  seqlen_balancing.py  torch.py  train_batching.py
src/openforge/worker_groups/: __init__.py  actor_critic_ref_worker_group.py  rollout_worker_group.py
src/openforge/workers/: __init__.py  actor_critic_ref_worker.py  rollout_worker.py
test_scripts/: _fsdp2_sglang_sync_common.py  _manager_weight_sync_common.py  _script_test_utils.py  _sglang_engine_update_common.py  _sglang_weight_update_common.py  debug_sglang_distributed_bucket.py  fsdp2_backend_gpu_test_script.py  fsdp2_backend_test_script.py  fsdp2_publish_test_script.py  offline_train_step.py  rollout_benchmark.py  rollout_group_test_script.py  rollout_worker_test_script.py  script_test_utils.py  sglang_runtime_server_test_script.py  sglang_runtime_weight_update_test_script.py  sglang_unit_test_script.py  test_algo_grpo.py  test_create_placement_groups.py  test_data_database.py  test_data_interfaces.py  test_data_types.py  test_fsdp2_manager_weight_sync_e2e.py  test_fsdp2_sglang_sync_disk.py  test_fsdp2_sglang_sync_distributed.py  test_fsdp2_sglang_sync_tensor.py  test_gateway_group_size.py  test_gateway_main.py  test_gateway_real_e2e.py  test_gateway_real_e2e_with_train.py  test_gateway_runtime.py  test_gateway_server.py  test_gateway_service.py  test_gateway_train_loop.py  test_networking.py  test_ninja.py  test_ninja_real_e2e.py  test_openforge_router_cpu_smoke.py  test_openforge_router_live.py  test_rollout_manager.py  (+9 more)
tests/: _manager_weight_sync_common.py  _script_test_utils.py  _sglang_engine_update_common.py  e2e_async_train_rollout_live.py  test_active_state.py  test_algo_grpo.py  test_algo_tis.py  test_cli.py  test_create_placement_groups.py  test_data_database.py  test_data_types.py  test_examples_shared.py  test_fsdp2_manager_weight_sync_e2e.py  test_gateway_group_size.py  test_gateway_main.py  test_gateway_real_e2e.py  test_gateway_real_e2e_with_train.py  test_gateway_runtime.py  test_gateway_runtime_cleanup.py  test_gateway_server.py  test_gateway_service.py  test_gateway_tool_call_parsing.py  test_gateway_train_loop.py  test_gateway_types.py  test_livecodebench_lcb_v6_common.py  test_logging_session.py  test_nccl_env.py  test_ninja.py  test_ninja_real_e2e.py  test_ninja_real_e2e_with_train.py  test_openclaw_example.py  test_openclaw_replay.py  test_openforge_router_live.py  test_ray_utils.py  test_rollout_engine.py  test_rollout_manager.py  test_rollout_manager_router_live.py  test_sglang_rollout_manager_stress.py  test_sglang_router_cpu_smoke.py  test_sglang_update_from_disk.py  (+5 more)
(+5 files in other folders)
