[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "openforge"
version = "0.1.0"
description = "Gateway-first post-training for LLM agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kevin Zhao", email = "kzhao16@gmail.com" },
    { name = "Zhaoran Wang", email = "zhaoran.wang@u.northwestern.edu" },
]
requires-python = ">=3.10"
keywords = ["llm", "rl", "post-training", "agents", "grpo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.135.1,<0.136",
    "httpx>=0.28.1,<0.29",
    "huggingface_hub>=0.36.2,<0.37",
    "loguru>=0.7.3,<0.8",
    "packaging>=26.0,<27",
    "pydantic>=2.12.5,<3",
    "pyyaml>=6.0.1,<7",
    "ray>=2.54.0,<3",
    "requests>=2.32.5,<3",
    "sglang[all]>=0.5.9,<0.6",
    "sglang_router>=0.3.2,<0.4",
    "torch>=2.9.1,<3",
    "textual>=1.0.0,<2",
    "transformers>=4.57.1,<5",
    "uvicorn>=0.41.0,<0.42",
    "wandb>=0.25.0,<1",
]

[project.urls]
Homepage = "https://github.com/khzhao/openforge"
Repository = "https://github.com/khzhao/openforge"

[project.scripts]
openforge = "openforge.cli.main:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0,<8",
    "pre-commit>=4.5.1,<5",
    "pyrefly>=0.55.0,<0.56",
    "pytest>=9.0.2,<10",
    "ruff>=0.15.5,<0.16",
]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

[tool.pyrefly.errors]
missing-argument = false

# Relax for third-party packages without type stubs (e.g. transformers).
# Use per-line `# pyrefly: ignore[missing-attribute]` if you want to keep
# this check only where you use such packages.
missing-attribute = false

[tool.ruff]
src = ["src"]
include = ["src/**/*.py"]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
preview = true

isort = { known-first-party = ["openforge"] }

select = [
  "C",
  "E",
  "F",
  "I",
  "W",
  "CPY001",
  "RUF013",
  "UP006",
  "PERF102",
  "PLC1802",
  "PLC0208",
  "D",
  "RUF002",
  "DOC102",
  "DOC202",
  "DOC403",
  "DOC502",
]

ignore = [
  "C901", # complex structure / mccabe complexity
  "E501", # line-too-long (formatter handles)
  "E741", # ambiguous variable name
  "D100", # Missing docstring in public module
  "D102", # Missing docstring in public method
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in __init__
  "D203", # conflict with D211
  "D213", # conflict with D212
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F403"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
anyio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
